# api/controllers/controller_clientes.js
@@ -1,19 +1,19 @@
 const mongoose = require('mongoose');
-const Cliente = require('../models/model_clientes')
+const Cliente = require('../models/model_clientes');
 
 const validarDadosCliente = async (req, res, next) => {
     const cliente = new Cliente(req.body);
     try {
         await cliente.validate();
-        next();
-    } catch (err) {
-        res.status(422).json({ msg: "Dados do cliente invalidos" });
+        next()
+    } catch (error) {
+        res.status(422).json({msg: 'Dados do Cliente inválidos'})
     }
-}
+};
 
-const novoCliente = async (req, res) => {
+const novoCliente = async (req,res) => {
     const cliente = await Cliente.create(req.body);
-    res.status(201).json(cliente)
+    res.status(201).json(cliente);
 }
 
 const obterTodosClientes = async (req, res, next) => {
@@ -33,6 +33,7 @@ const clientePeloId = async (req, res, next) => {
     } catch (error) {
         res.status(400).json({msg: 'id inválido'})
     }
+
 }
 
 const obterCliente = async (req, res) => {
@@ -43,7 +44,7 @@ const obterCliente = async (req, res) => {
 
 const atualizarCliente = async (req,res) => {
     const id = new mongoose.Types.ObjectId(req.params.id);
-    const cliente = await Cliente.findByIdAndUpdate({_id: id}, req.body);
+    const cliente = await Cliente.findByIdAndUpdate({ _id: id }, req.body);
     res.json(cliente);
 };
 
@@ -53,4 +54,4 @@ const removerCliente = async (req, res) => {
     res.status(204).end();
 };
 
-module.exports = {validarDadosCliente, novoCliente, obterTodosClientes, clientePeloId, obterCliente, atualizarCliente, removerCliente}
+module.exports = { validarDadosCliente, novoCliente, obterTodosClientes, clientePeloId, obterCliente, atualizarCliente, removerCliente  };
